# Travel_Ai_App

./: .bandit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .graphifyignore  .semgrepignore  .spectral.yaml  AGENTS.md  CHANGELOG.md  README.md  tasks.md
services/ai-planning-service/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/ai-planning-service/app/: application.py  config.py  main.py  observability.py  privacy.py  version.py
services/ai-planning-service/app/api/: dependencies.py  destination_context_routes.py  knowledge_routes.py  routes.py
services/ai-planning-service/app/core/: errors.py  paths.py  readiness.py
services/ai-planning-service/app/schemas/: checklist.py  copilot.py  destination_context.py  generation_repair.py  (+10 more)
services/ai-planning-service/docs/: api.rst  architecture.rst  conf.py  index.rst
services/ai-planning-service/scripts/: run_evals.py
services/ai-planning-service/tests/: test_checklist_generation.py  test_chroma_client.py  test_copilot.py  test_destination_context_routes.py  test_destination_knowledge.py  test_destination_suggestions.py  test_estimated_cost.py  test_generate_itinerary.py  test_generation_repair.py  test_grounding.py  test_grounding_quality.py  test_i18n.py  test_itinerary_validator.py  test_knowledge_chunker.py  test_knowledge_routes.py  test_knowledge_search.py  test_ollama_embedding_client.py  test_ollama_generator.py  test_privacy.py  test_prompt_builder_rag.py  test_route_alternatives.py  test_template_adaptation.py  test_trip_recap.py  test_workspace_policy_constraints.py
(+2631 files in other folders)
