[project]
name = "ai-planning-service"
version = "0.1.0"
description = "FastAPI service for Travel AI itinerary generation and planning."
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "Travel AI App" }]
dependencies = [
    "chromadb>=0.5,<1.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "posthog<6",
    "prometheus-client>=0.20,<1.0",
    "pydantic>=2.7,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
black = ">=24.8,<27.0"
flake8 = ">=7.0,<8.0"
isort = ">=5.13,<7.0"
mypy = ">=1.13,<3.0"
pytest = ">=8.0,<9.0"
ruff = ">=0.8,<1.0"
sphinx = ">=8.1,<10.0"

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
src_paths = ["app", "tests", "docs"]
skip = ["app/data/chroma", "docs/_build"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
